--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
     <header>
         <div class="logo">
-            <img src="./img/logot.png" >
-            <h2>New & Renewed Technology</h2>
+            <a href="./index.html">
+                <img src="./img/logot.png">
+                <h2>New & Renewed Technology</h2>
+            </a>
         </div>
         <nav>
             <a href="#productos">Productos</a>
@@ -27,7 +29,7 @@
                 <div class="texto">
                     <h2>Productos Nuevos</h2>
                     <p>Computadores, laptops y componentes nuevos.</p>
-                    <a href="" class="btn">Ver Productos</a>
+                    <a href="./prodnuevo.html" class="btn">Ver Productos</a>
                 </div>
             </div>
             <div class="card">
@@ -35,7 +37,7 @@
                 <div class="texto">
                     <h2>Productos Renovados</h2>
                     <p>Computadores, laptops y más a modicos precios...</p>
-                    <a href="" class="btn">Ver Productos</a>
+                    <a href="./prodrenov.html" class="btn">Ver Productos</a>
                 </div>
             </div>
             <div class="card">
@@ -43,15 +45,15 @@
                 <div class="texto">
                     <h2>Servicios</h2>
                     <p>Servicio Técnico, mantenimiento, asesoramiento, y más...</p>    
-                    <a href="" class="btn">Ver Servicios</a>
+                    <a href="./nservicios.html" class="btn">Ver Servicios</a>
                 </div>
             </div>
             <div class="card">
                 <img src="./img/enseñar.png">
                 <div class="texto">
                     <h2>Aprende con nosotros</h2>
-                    <p>Aprende sobre informatica basica, desde como manejar un computador, ofimatica básica y sistemas Linux.</p>
-                    <a href="" class="btn">Eduquemonos</a>
+                    <p>Aprende informatica basica, manejar un computador, ofimatica básica y Linux.</p>
+                    <a href="./neducate.html" class="btn">Eduquemonos</a>
                 </div>
             </div>
         </div>
