feature: modificacion de estilos de navbar y refactorizacion de footer
Se evita el clash visual con la foto de fondo añadiendole un filtro, el logo tiene colores invertidos para que sobresalga en el fondo negro y se crea desde cero el footer con un corazon

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-
-    <header>
+<header>
         <div class="logo">
             <a href="./index.html">
                 <img src="./img/logot.png">
@@ -21,7 +20,7 @@
             <a href="#contacto">Contacto</a>
         </nav>
     </header>
-
+    <div class="spacingContainer">
     <section id="productos">
         <div class="prodserv">
             <div class="card">
@@ -58,7 +57,7 @@
             </div>
         </div>
     </section>
-
+    </div>
     <section id="empresa">
         <div class="empresa">
             <div class="card">
@@ -94,22 +93,23 @@
 
     </section>
 
+    <div class="spacingContainer">
     <section id="aboutus">
         <div id="title">
             <h1>SOBRE NOSOTROS</h1>
         </div>
         <div class="nosotros">
-            <div id="mision">
+            <div id="mision" class="card">
                 <img src="./img/monitor.png">
                 <h3>Misión</h3>
                 <p>Nuestra misión es ir más allá de la renovación de laptops y PC para la reventa y reutilización de partes y concentrarnos en cómo nuestras acciones pueden beneficiar a la comunidad. Nos comprometemos a brindar el mejor servicio posible a los integrantes de nuestra comunidad para brindar soluciones a sus necesidades tecnológicas y ofrecer educación tecnológica a las personas interesadas, nos comprometemos con el medio ambiente cumpliendo con la normativa ISO 14001 así evitando que nuestros esfuerzos tengan un impacto negativo en el medio ambiente de nuestra comunidad.</p>
             </div>
-            <div id="vision">
+            <div id="vision" class="card">
                 <img src="./img/educacion.png">
                 <h3>Visión</h3>
                 <p>Nuestra visión es tener un impacto positivo en nuestra comunidad mejorando el nivel de alfabetización tecnológica en todas las edades, permitiendo a más personas tener acceso a una educación y ofrecer nuestros servicios para ser un punto de reciclaje, reparo y reutilización tecnológica en nuestra comunidad impulsando así la transformación social a la vez que eliminamos las barreras económicas que impiden a las personas el acceso a equipos informáticos.</p>
             </div>
-            <div id="valores">
+            <div id="valores" class="card">
                 <img src="./img/heart.png">
                 <h3>Valores Principales</h3>
                 <ul>
@@ -122,8 +122,11 @@
         </div>
     </section>
 
-    <footer id="contacto">
-        <p>Informacion a: <a href="https://github.com/JGushe/DeoWeb" target="_blank" class="btn">ushe@rntech.com.ec</a></p>
-    </footer>
+    
+    </div>
+    <p class="footer-heart">
+   Hecho con <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">
+<img class="emoji" alt="heart" height="20" width="20" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png"></g-emoji> por <a target="_blank" href="https://github.com/JGushe">Ushe</a>
+</p>
 </body>
 </html>
