--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N&R Tech</title>
@@ -20,44 +21,54 @@
             <a href="#contacto">Contacto</a>
         </nav>
     </header>
+    
     <div class="spacingContainer">
         <section id="productos">
             <div class="prodserv">
                 <div class="card">
                     <img src="./img/nuevos.png">
                     <div class="texto">
-                        <h2>Productos Nuevos</h2>
-                        <p>Computadores, laptops y componentes nuevos.</p>
-                        <a href="./prodnuevo.html" class="btn">Ver Productos</a>
+                        <h2 class="cambiar-color">Productos Nuevos</h2>
+                        <p>¡Lo último en tendencias y tecnología!</p>
+                        <p>Sé de los primeros en experimentar lo nuevo antes que nadie.</p><br><br>
+                        <a href="./prodnuevo.html" class="btn"><b>Ver Productos</b></a>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/Renovados.png">
                     <div class="texto">
-                        <h2>Productos Renovados</h2>
-                        <p>Computadores, laptops y más a modicos precios...</p>
-                        <a href="./prodrenov.html" class="btn">Ver Productos</a>
+                        <h2 class="cambiar-color">Productos Renovados</h2>
+                        <p>¡Precios increíbles en productos renovados!</p>
+                            <p> Explora nuestra gama de productos renovados y ahorra sin renunciar a la calidad.</p> <br>
+                        <a href="./prodrenov.html" class="btn"><b>Ver Productos</b></a>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/soporte-tecnico.png">
                     <div class="texto">
-                        <h2>Servicios</h2>
-                        <p>Servicio Técnico, mantenimiento, asesoramiento, y más...</p>    
-                        <a href="./nservicios.html" class="btn">Ver Servicios</a>
+                        <h2 class="cambiar-color">Servicios Tecnológicos</h2>
+                        <p>¡Expertos a tu servicio!
+                        </p>
+                        <p>Confíe en nosotros para obtener asistencia de primera clase, orientación experta y apoyo técnico.</p>
+                        <a href="./nservicios.html" class="btn"><b>Ver Servicios</b></a>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/enseñar.png">
                     <div class="texto">
-                        <h2>Aprende con nosotros</h2>
-                        <p>Aprende informatica basica, manejar un computador, ofimatica básica y Linux.</p>
-                        <a href="./neducate.html" class="btn">Eduquemonos</a>
+                        <h2 class="cambiar-color">Aprende con nosotros</h2>
+                        <p>¡Explora, descubre y capacítate con nosotros!
+                        </p>
+                            <p>
+                            Domina el mundo digital con nuestros programas personalizados, prácticos y dinámicos.
+                        </p> <br>
+                        <a href="./neducate.html" class="btn"><b>Eduquemonos</b></a>
                     </div>
                 </div>
             </div>
         </section>
     </div>
+
     <section id="empresa">
         <div class="empresa">
             <div class="card">
@@ -87,7 +98,9 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./img/logoemp.png">
+                <div class="img">
+                    <img src="./img/logoemp.png">
+                </div>
             </div>
         </div>
 
@@ -122,9 +135,10 @@
             </div>
         </section>
     </div>
+    
     <p class="footer-heart">
-   Hecho con <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">
-<img class="emoji" alt="heart" height="20" width="20" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png"></g-emoji> por <a target="_blank" href="https://github.com/JGushe">Ushe</a>
-</p>
+    Hecho con <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">
+    <img class="emoji" alt="heart" height="20" width="20" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png"></g-emoji> por <a target="_blank" href="https://github.com/JGushe">Ushe</a>
+    </p>
 </body>
 </html>
