--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <a href="./index.html">
-                <img src="./img/logot.png">
-                <h2>New & Renewed Technology</h2>
-            </a>
-        </div>
+        <a href="./index.html" class="logo"><img src="./img/logot.png">&nbsp;&nbsp;&nbsp;New & Renewed Technology</a>
         <nav>
-            <a href="#productos">Productos</a>
-            <a href="#aboutus">Acerca De</a>
+            <a href="./aboutus.html">Acerca de Nosotros</a>
             <a href="#contacto">Contacto</a>
         </nav>
     </header>
@@ -69,76 +63,68 @@
         </section>
     </div>
 
-    <section id="empresa">
-        <div class="empresa">
-            <div class="card">
-                <div class="texto">
-                    <h2>Nosotros como empresa:</h2>
-                    <p>
-                        En N&R Technology estamos comprometidos en ofrecer productos y servicios de gran calidad satisfaciendo la necesidad de nuestros clientes. Por ello hemos desarrollado una filosofía empresarial en ofrecer soluciones integrales a problemas tecnológicos de la actualidad.
-                        <br><br>Nuestro enfoque es proporcionar a nuestros clientes una amplia selección de productos, desde computadores renovados (segunda mano) a computadores de última tecnología, servicios técnicos, mantenimiento y renovación de computadores personales.
-                        <br><br>Ofrecemos soluciones confiables y duraderas para las necesidades de nuestros consumidores, manteniendo la responsabilidad y transparencia.
-                        <br><br>Por otra parte, ofrecemos cursos semi intensivos de informática básica, aprendiendo a usar un computador, ofimática básica y manejo en sistemas Linux, los cuales se basan algunos de nuestros ordenadores renovados.
+    <section id="one">
+        <div class="banner">
+            <div class="cont">
+                <h1>Computadores Renovados</h1>
+                <p>Ofrecemos calidad, variedad y disponibilidad de equipos computacionales (laptops, computadores de escritorio, componentes y más).</p>
+                <p>Modicos precios desde $150 en computadores renovados con tecnología de Intel, AMD y procesadores basados en ARM. Todos nuestros equipos tienen garantía local de 6 meses por fallas en el hardware.</p>
+            </div>
+            <div class="img">
+                <img src="./banner/banner1.png" >
+            </div>
+        </div>
+    </section>
 
-                    </p>
-                </div>
+    <div class="separador">
+    </div>
+
+
+    <section id="two">
+        <div class="banner">
+            <div class="img">
+                <img src="./banner/banner2.webp" >
             </div>
-            <div class="card">
-                <div class="texto">
-                    <h2>Objetivos</h2>
-                    <ul>
-                        <li>Facilitar la accesibilidad a la tecnología.</li>
-                        <li>Garantizar servicios de mantenimiento y renovación.</li>
-                        <li>Promover la reutilizacion de equipos computacionales.</li>
-                        <li>Fortalecer el trabajo en equipo.</li>
-                        <li>Reforzar el sentido de pertenencia y orgullo organizacional.</li>
-                    </ul>
-                    <h2>Cultura Organizacional</h2>
-                    <p class="obj">Podemos definir nuestra cultura organizacional con "Orientación hacia la persona”, nos caracterizamos por el trabajo en equipo, enfoque en desarrollo personal, liderazgo y mentoría, compromiso, empoderamiento y desarrollo humano. Contamos con una cultura organizacional fuerte, lo que nos da una base solida de crecimiento y lograr nuestros objetivos de impacto social y ambiental.</p>
-                </div>
+
+            <div class="cont">
+                <h1>Computadores Nuevos</h1>
+                <p>Vendemos componentes de computadores de ultima generación, realizamos ensambles customizados por los clientes y vendemos computadores pre-ensamblados con precios accesibles desde los $350.</p>
+                <p>Utilizamos componentes de generaciones actuales en marcas Intel, AMD, NVIDIA, Corsair, Asus, entre muchos más, brindando garantía local de un año en todos los componentes y computadores.</p>
             </div>
-            <div class="card">
-                <div class="img">
-                    <img src="./img/logoemp.png">
-                </div>
-            </div>
+
         </div>
 
     </section>
 
-    <div class="spacingContainer">
-        <section id="aboutus">
-            <div id="title">
-                <h1>SOBRE NOSOTROS</h1>
+    <div class="separador">
+    </div>
+
+
+    <section id="three">
+        <div class="banner">
+
+            <div class="cont">
+                <h1>Servicio Tecnico y Ensanble de computadores</h1>
+                <p>Contamos con tecnicos especializados en dar un excelente servicio al momento de inspeccionar, determinar problemas y realizar soluciones a sus computadorers.</p>
+                <p>Servicio garantizado, con precios desde $10 en limpieza del computador y diagnostico de problemas.</p>
             </div>
-            <div class="nosotros">
-                <div id="mision" class="card">
-                    <img src="./img/monitor.png">
-                    <h3>Misión</h3>
-                    <p>Nuestra misión es ir más allá de la renovación de laptops y PC para la reventa y reutilización de partes y concentrarnos en cómo nuestras acciones pueden beneficiar a la comunidad. Nos comprometemos a brindar el mejor servicio posible a los integrantes de nuestra comunidad para brindar soluciones a sus necesidades tecnológicas y ofrecer educación tecnológica a las personas interesadas, nos comprometemos con el medio ambiente cumpliendo con la normativa ISO 14001 así evitando que nuestros esfuerzos tengan un impacto negativo en el medio ambiente de nuestra comunidad.</p>
-                </div>
-                <div id="vision" class="card">
-                    <img src="./img/educacion.png">
-                    <h3>Visión</h3>
-                    <p>Nuestra visión es tener un impacto positivo en nuestra comunidad mejorando el nivel de alfabetización tecnológica en todas las edades, permitiendo a más personas tener acceso a una educación y ofrecer nuestros servicios para ser un punto de reciclaje, reparo y reutilización tecnológica en nuestra comunidad impulsando así la transformación social a la vez que eliminamos las barreras económicas que impiden a las personas el acceso a equipos informáticos.</p>
-                </div>
-                <div id="valores" class="card">
-                    <img src="./img/heart.png">
-                    <h3>Valores Principales</h3>
-                    <ul>
-                        <li>Sostenibilidad: Tenemos un compromiso social con la reducción de la basura electrónica generada por la comunidad el cual solucionamos ofreciéndonos como un punto de reciclaje de basura electrónica.</li>
-                        <li>Comunidad: Estamos enfocados en devolver a la comunidad a través de nuestra prestación de servicios de venta y mejora de laptops y PCs a la vez que incentivamos a la comunidad a la utilización de los equipos informáticos de una forma beneficiosa.</li>
-                        <li>Transparencia: Actuamos de manera honesta y amigable con los clientes en cada venta notificando sobre cualquier tipo de observación sobre los equipos vendidos y creando un vínculo de confianza. </li>
-                        <li>Calidad: Siempre tendremos en mente la calidad de nuestros productos y servicios, estos deben ser de la mayor calidad posible y cada venta debe tener detallada cualquier tipo de observación sobre el equipo ya que es importante mantener la confianza y transparencia con la comunidad </li>
-                    </ul>
-                </div>
+
+            <div class="img">
+                <img src="./banner/banner3.png" >
             </div>
-        </section>
+
+        </div>
+    </section>
+
+    <div class="separador">
+    </div>
+
+    <div id="contacto">
+        <p class="footer-heart">
+            Hecho con <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">
+            <img class="emoji" alt="heart" height="20" width="20" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png"></g-emoji> por <a target="_blank" href="https://github.com/JGushe">Ushe</a>
+        </p>
     </div>
     
-    <p class="footer-heart">
-    Hecho con <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">
-    <img class="emoji" alt="heart" height="20" width="20" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png"></g-emoji> por <a target="_blank" href="https://github.com/JGushe">Ushe</a>
-    </p>
 </body>
 </html>
