--- a/nservicios.html
+++ b/nservicios.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N&R Tech</title>
@@ -10,18 +11,22 @@
 <body>
 
     <header>
-        <div class="logo">
-            <a href="./index.html">
-                <img src="./img/logot.png">
-                <h2>New & Renewed Technology</h2>
-            </a>
-        </div>
+        <a href="./index.html" class="logo"><img src="./img/logot.png">&nbsp;&nbsp;&nbsp;New & Renewed Technology</a>
         <nav>
-            <a href="#productos">Productos</a>
-            <a href="./index.html">Acerca De</a>
+            <a href="./index.html">Productos y Servicios</a>
+            <a href="./aboutus.html">Acerca de Nosotros</a>
             <a href="#contacto">Contacto</a>
         </nav>
     </header>
+    <div id="navegador">
+        <nav class="navegador">
+            <ul>
+                <li><a href="./prodnuevo.html">Productos Nuevos</a></li>
+                <li><a href="./prodrenov.html">Productos Renovados</a></li>
+                <li><a href="./neducate.html">Eduquemonos</a></li>
+            </ul>
+        </nav>
+    </div>
     
     <div class="spacingContainer">
         <section id="productos">
