--- a/prodrenov.html
+++ b/prodrenov.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N&R Tech</title>
     <link rel="stylesheet" href="./styles2.css">
@@ -10,19 +11,25 @@
 <body>
 
     <header>
-        <div class="logo">
-            <a href="./index.html">
-                <img src="./img/logot.png">
-                <h2>New & Renewed Technology</h2>
-            </a>
-        </div>
+        <a href="./index.html" class="logo"><img src="./img/logot.png">&nbsp;&nbsp;&nbsp;New & Renewed Technology</a>
         <nav>
-            <a href="#productos">Productos</a>
-            <a href="#aboutus">Acerca De</a>
+            <a href="./index.html">Productos y Servicios</a>
+            <a href="./aboutus.html">Acerca de Nosotros</a>
             <a href="#contacto">Contacto</a>
         </nav>
     </header>
+    <div id="navegador">
+        <nav class="navegador">
+            <ul>
+                <li><a href="./prodnuevo.html">Productos Nuevos</a></li>
+                <li><a href="./nservicios.html">Nuestros Servicios</a></li>
+                <li><a href="./neducate.html">Eduquemonos</a></li>
+            </ul>
+        </nav>
+    </div>
 
+
+    
     <div class="spacingContainer">
         <section id="productos">
             <div class="container">
